kfreebsd-10 (10.0~svn227111-3) UNRELEASED; urgency=low

  * Mark kfreebsd-headers-@version@-@abiname@ as kfreebsd-any.
  * Depend on package providing devd.
  * Fix installability problem on non-kfreebsd platforms.

 -- Robert Millan <rmh@debian.org>  Thu, 17 Nov 2011 21:24:41 +0100

kfreebsd-10 (10.0~svn227111-2) experimental; urgency=low

  * Fix i386 udeb flavor (should be -486, not -xen).

 -- Robert Millan <rmh@debian.org>  Sun, 06 Nov 2011 12:45:28 +0100

kfreebsd-10 (10.0~svn227111-1) experimental; urgency=low

  * New upstream snapshot.
    - 005_linux_cflags.diff: Remove (merged).
    - 108_teken_utf8_table.diff: Remove (merged).

  [ Robert Millan ]
  * Replace sed kludge with a pair of patches (920_linux_cflags.diff and
    008_verioned_freebsd_macro.diff).
  * Remove gen-ld-u-options / 020_linker.diff kludge, not needed since
    upstream fixed this (r215137).
  * Build udebs for the installer.

 -- Robert Millan <rmh@debian.org>  Sun, 06 Nov 2011 00:11:08 +0100

kfreebsd-10 (10.0~svn226872-2) experimental; urgency=low

  * Require ZFS v28 userland (Breaks: zfsutils (<< 8.3~)).
  * Recover 918_delete_key.diff patch from r3199.  (Closes: #605065)

 -- Robert Millan <rmh@debian.org>  Sat, 29 Oct 2011 22:23:38 +0200

kfreebsd-10 (10.0~svn226872-1) experimental; urgency=low

  * New upstream snapshot.

  [ Robert Millan ]
  * Remove /boot symlink kludge.  See:
    http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=633561#88
  * Fix panic on early boot.  (Closes: #644417)
    - Switch back to GCC 4.4.
    - Turn optimization down to -O1 (901_disable_optimization_2.diff).
  * Remove 907_cpu_class.diff (it breaks FreeBSD userland when running
    in a chroot on Debian kernel).

  [ Petr Salinger ]
  * Drop 103_stat_pipe.diff, fixed upstream.
  * Add 918_unix_socket_overflow.diff, to fix up breakage in our userland
    after 000_unix_socket_overflow.diff. Closes: #645527.

 -- Robert Millan <rmh@debian.org>  Fri, 28 Oct 2011 12:40:27 +0200
