@@ -6,7 +6,7 @@
 #007_clone_signals.diff
 008_verioned_freebsd_macro.diff
 #009_disable_duped_modules.diff
-#107_mount_update.diff
+107_mount_update.diff
 109_linprocfs_non_x86.diff
 110_disable_trampoline_flavour.diff
 901_disable_optimization_2.diff
