@@ -3,8 +3,11 @@ kfreebsd-10 (10.0~svn227111-3) UNRELEASED; urgency=low
   * Mark kfreebsd-headers-@version@-@abiname@ as kfreebsd-any.
   * Depend on package providing devd.
   * Fix installability problem on non-kfreebsd platforms.
+  * Rewrite 107_mount_update.diff to fix the new problem with same symptoms
+    (this time, a regression introduced by upstream rev 220937).
+    (Closes: #646957)
 
- -- Robert Millan <rmh@debian.org>  Thu, 17 Nov 2011 21:24:41 +0100
+ -- Robert Millan <rmh@debian.org>  Mon, 21 Nov 2011 18:42:05 +0100
 
 kfreebsd-10 (10.0~svn227111-2) experimental; urgency=low
 
